--- a/p1ch3/1_tensors.ipynb
+++ b/p1ch3/1_tensors.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "        [2., 1.]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "torch.Size([3, 2])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "        [0., 0.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "        [2., 1.]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "tensor([4., 1.])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,9 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_260612/2923139482.py:2: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
+      "  points.storage()\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -332,10 +340,10 @@
        " 3.0\n",
        " 2.0\n",
        " 1.0\n",
-       "[torch.FloatStorage of size 6]"
+       "[torch.storage.TypedStorage(dtype=torch.float32, device=cpu) of size 6]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +355,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "tensor(data, *, dtype=None, device=None, requires_grad=False, pin_memory=False) -> Tensor\n",
+       "\n",
+       "Constructs a tensor with no autograd history (also known as a \"leaf tensor\", see :doc:`/notes/autograd`) by copying :attr:`data`.\n",
+       "\n",
+       ".. warning::\n",
+       "\n",
+       "    When working with tensors prefer using :func:`torch.Tensor.clone`,\n",
+       "    :func:`torch.Tensor.detach`, and :func:`torch.Tensor.requires_grad_` for\n",
+       "    readability. Letting `t` be a tensor, ``torch.tensor(t)`` is equivalent to\n",
+       "    ``t.clone().detach()``, and ``torch.tensor(t, requires_grad=True)``\n",
+       "    is equivalent to ``t.clone().detach().requires_grad_(True)``.\n",
+       "\n",
+       ".. seealso::\n",
+       "\n",
+       "    :func:`torch.as_tensor` preserves autograd history and avoids copies where possible.\n",
+       "    :func:`torch.from_numpy` creates a tensor that shares storage with a NumPy array.\n",
+       "\n",
+       "Args:\n",
+       "    data (array_like): Initial data for the tensor. Can be a list, tuple,\n",
+       "        NumPy ``ndarray``, scalar, and other types.\n",
+       "\n",
+       "Keyword args:\n",
+       "    dtype (:class:`torch.dtype`, optional): the desired data type of returned tensor.\n",
+       "        Default: if ``None``, infers data type from :attr:`data`.\n",
+       "    device (:class:`torch.device`, optional): the device of the constructed tensor. If None and data is a tensor\n",
+       "        then the device of data is used. If None and data is not a tensor then\n",
+       "        the result tensor is constructed on the current device.\n",
+       "    requires_grad (bool, optional): If autograd should record operations on the\n",
+       "        returned tensor. Default: ``False``.\n",
+       "    pin_memory (bool, optional): If set, returned tensor would be allocated in\n",
+       "        the pinned memory. Works only for CPU tensors. Default: ``False``.\n",
+       "\n",
+       "\n",
+       "Example::\n",
+       "\n",
+       "    >>> torch.tensor([[0.1, 1.2], [2.2, 3.1], [4.9, 5.2]])\n",
+       "    tensor([[ 0.1000,  1.2000],\n",
+       "            [ 2.2000,  3.1000],\n",
+       "            [ 4.9000,  5.2000]])\n",
+       "\n",
+       "    >>> torch.tensor([0, 1])  # Type inference on data\n",
+       "    tensor([ 0,  1])\n",
+       "\n",
+       "    >>> torch.tensor([[0.11111, 0.222222, 0.3333333]],\n",
+       "    ...              dtype=torch.float64,\n",
+       "    ...              device=torch.device('cuda:0'))  # creates a double tensor on a CUDA device\n",
+       "    tensor([[ 0.1111,  0.2222,  0.3333]], dtype=torch.float64, device='cuda:0')\n",
+       "\n",
+       "    >>> torch.tensor(3.14159)  # Create a zero-dimensional (scalar) tensor\n",
+       "    tensor(3.1416)\n",
+       "\n",
+       "    >>> torch.tensor([])  # Create an empty tensor (of size (0,))\n",
+       "    tensor([])\n",
+       "\u001b[0;31mType:\u001b[0m      builtin_function_or_method"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "?torch.tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +437,7 @@
        "4.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +458,7 @@
        "1.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +480,7 @@
        "        [2., 1.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,6 +490,32 @@
     "points_storage = points.storage()\n",
     "points_storage[0] = 2.0\n",
     "points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 2.0\n",
+       " 1.0\n",
+       " 5.0\n",
+       " 3.0\n",
+       " 2.0\n",
+       " 1.0\n",
+       "[torch.storage.TypedStorage(dtype=torch.float32, device=cpu) of size 6]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points_storage"
    ]
   },
   {
@@ -1353,7 +1460,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1367,9 +1474,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
